syntax = "proto3";

package proto;

option go_package = "github.com/watariRyo/balance/server/proto";

message ListGroupRequest {
    string user_id = 1;
}

message ListGroupResponse {
    repeated GroupResponse group_list = 1;
}

message GroupResponse {
    int64 id = 1;
    string user_id = 2;
    string group_name = 3;
}

message GetGroupRequest {
    string user_id = 1;
    string group_name = 2;
}

message GetGroupResponse {
    int64 id = 1;
    string user_id = 2;
    string group_name = 3;
}

message RegisterGroupRequest {
    string user_id = 1;
    string group_name = 2;
}

message RegisterGroupResponse {
    int64 id = 1;
    string user_id = 2;
    string group_name = 3;
}

message UpdateGroupRequest {
    int64 id = 1;
    string user_id = 2;
    string group_name = 3;
}

message UpdateGroupResponse {
    int64 id = 1;
    string user_id = 2;
    string group_name = 3;
}

message DeleteGroupRequest {
    int64 id = 1;
    string user_id = 2;
}

message DeleteGroupResponse {
    int64 id = 1;
    string user_id = 2;
}

service GroupService {
    rpc ListGroup (ListGroupRequest) returns (ListGroupResponse);
    rpc GetGroup (GetGroupRequest) returns (GetGroupResponse);
    rpc RegisterGroup (RegisterGroupRequest) returns (RegisterGroupResponse);
    rpc UpdateGroup (UpdateGroupRequest) returns (UpdateGroupResponse);
    rpc DeleteGroup (DeleteGroupRequest) returns (DeleteGroupResponse);
}