syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "github.com/watariRyo/balance/server/proto";

message ListUserTagRequest {
    string user_id = 1;
    string sessoin_id = 2;
}

message ListUserTagResponse {
    repeated UserTagResponse user_tag_list = 1;
}

message UserTagResponse {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    bool has_group = 4;
    int64 group_id = 5;
    string grant_limit = 6;
}

message GetUserTagRequest {
    int64 id = 1;
    string user_id = 2;
    string sessoin_id = 3;
}

message GetUserTagResponse {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    bool has_group = 4;
    int64 group_id = 5;
    string grant_limit = 6;
}

message RegisterUserTagRequest {
    string user_id = 1;
    string tag_name = 2;
    bool has_group = 3;
    int64 group_id = 4;
    string grant_limit = 5;
    string sessoin_id = 6;
}

message RegisterUserTagResponse {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    bool has_group = 4;
    int64 group_id = 5;
    string grant_limit = 6;
}

message UpdateUserTagRequest {
    int64 id = 1;
    string user_id = 2;
    string sessoin_id = 3;
}

message UpdateUserTagResponse {
    int64 id = 1;
    string user_id = 2;
    string tag_name = 3;
    bool has_group = 4;
    int64 group_id = 5;
    string grant_limit = 6;
}

message DeleteUserTagRequest {
    int64 id = 1;
    string user_id = 2;
    string sessoin_id = 3;
}

message DeleteUserTagResponse {
    int64 id = 1;
    string user_id = 2;
}

service UserTagService {
    rpc ListUserTag (ListUserTagRequest) returns (ListUserTagResponse) {
        option (google.api.http) = {
            get: "/balance/api/tag"
        };
    };
    rpc GetUserTag (GetUserTagRequest) returns (GetUserTagResponse) {
        option (google.api.http) = {
            get: "/balance/api/tag/{id}"
        };
    };
    rpc RegisterUserTag (RegisterUserTagRequest) returns (RegisterUserTagResponse) {
        option (google.api.http) = {
            post: "/balance/api/tag/user",
            body: "*"
        };
    };
    rpc UpdateUserTag (UpdateUserTagRequest) returns (UpdateUserTagResponse) {
        option (google.api.http) = {
            put: "/balance/api/tag/{id}",
            body: "*"
        };
    };
    rpc DeleteUserTag (DeleteUserTagRequest) returns (DeleteUserTagResponse) {
        option (google.api.http) = {
            delete: "/balance/api/tag/{id}"
        };
    };
}